--- a/index.html
+++ b/index.html
@@ -21,12 +21,84 @@
   <body>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <p class="text-modal"></p>
         <button class="close-btn-modal" type="button" data-modal-close="">
           <svg class="icon-btn-modal">
             <use href="./images/svg/symbol-defs.svg#icon-close"></use>
           </svg>
         </button>
+        <p class="text-modal">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <label class="modal-form-field">
+            <span class="modal-form-input-desc">Name</span>
+            <span class="modal-form-input-wrapper">
+              <input
+                type="text"
+                class="modal-form-input"
+                placeholder="Your name"
+                name="user_name"
+                required
+                pattern="^[a-zA-Za]+$]"
+                minlength="2"
+              />
+              <svg class="modal-form-input-icon">
+                <use href="./images/svg/symbol-defs.svg#icon-person-black-18dp"></use>
+              </svg>
+            </span>
+          </label>
+          <label for="" class="modal-form-field">
+            <span class="modal-form-input-desc">Phone</span>
+            <span class="modal-form-input-wrapper">
+              <input
+                type="tel"
+                class="modal-form-input"
+                placeholder="Your phone number"
+                name="user_phone"
+                required
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx"
+              />
+              <svg class="modal-form-input-icon">
+                <use href="./images/svg/symbol-defs.svg#icon-phone-black-18dp"></use>
+              </svg>
+            </span>
+          </label>
+          <label for="" class="modal-form-field">
+            <span class="modal-form-input-desc">Email</span>
+            <span class="modal-form-input-wrapper">
+              <input
+                type="email"
+                class="modal-form-input"
+                placeholder="Your email"
+                name="user_email"
+              />
+              <svg class="modal-form-input-icon">
+                <use href="./images/svg/symbol-defs.svg#icon-email-black-18dp"></use>
+              </svg>
+            </span>
+          </label>
+
+          <label for="" class="modal-form-field">
+            <span class="modal-form-input-desc">Comment</span>
+            <textarea
+              name="user-message"
+              class="modal-form-textarea"
+              placeholder="Text input"
+            ></textarea>
+          </label>
+          <input
+            id="user-policy"
+            type="checkbox"
+            class="modal-form-check visually-hidden"
+            name="user-policy"
+          />
+          <label for="user-policy" class="modal-form-check-desc"
+            >I accept the terms and conditions of the
+            <a href="" class="">&nbsp;Privacy Policy</a></label
+          >
+          <div class="modal-form-btn-wrapper">
+            <button type="submit" class="btn">Send</button>
+          </div>
+        </form>
       </div>
     </div>
     <header class="header">
@@ -409,6 +481,22 @@
             </li>
           </ul>
         </div>
+
+        <form class="subscribe-form">
+          <p class="subscribe-text">Subscribe</p>
+          <input
+            type="email"
+            class="subscribe-form-input"
+            placeholder="E-mail"
+            name="user_subscribe_email"
+          />
+          <button type="submit" class="subscribe-btn">
+            Subscribe
+            <svg class="footer-subscribe-btn-icon" width="24" height="24">
+              <use href="./images/svg/symbol-defs.svg#icon-send"></use>
+            </svg>
+          </button>
+        </form>
       </div>
     </footer>
 
