--- a/portfolio.html
+++ b/portfolio.html
@@ -282,6 +282,23 @@
             </li>
           </ul>
         </div>
+        <form class="subscribe-form">
+          <p class="subscribe-text">Subscribe</p>
+          <div class="subscribe-content">
+            <input
+              type="email"
+              class="subscribe-form-input"
+              placeholder="E-mail"
+              name="user_subscribe_email"
+            />
+            <button type="submit" class="subscribe-btn">
+              Subscribe
+              <svg class="footer-subscribe-btn-icon" width="24" height="24">
+                <use href="./images/svg/symbol-defs.svg#icon-send"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
   </body>
