--- a/index.html
+++ b/index.html
@@ -93,11 +93,9 @@
           />
           <label for="user-policy" class="modal-form-check-desc"
             >I accept the terms and conditions of the
-            <a href="" class="">&nbsp;Privacy Policy</a></label
+            <a href="" class="user-policy-link">&nbsp;Privacy Policy</a></label
           >
-          <div class="modal-form-btn-wrapper">
-            <button type="submit" class="btn">Send</button>
-          </div>
+          <button type="submit" class="btn">Send</button>
         </form>
       </div>
     </div>
@@ -484,18 +482,20 @@
 
         <form class="subscribe-form">
           <p class="subscribe-text">Subscribe</p>
-          <input
-            type="email"
-            class="subscribe-form-input"
-            placeholder="E-mail"
-            name="user_subscribe_email"
-          />
-          <button type="submit" class="subscribe-btn">
-            Subscribe
-            <svg class="footer-subscribe-btn-icon" width="24" height="24">
-              <use href="./images/svg/symbol-defs.svg#icon-send"></use>
-            </svg>
-          </button>
+          <div class="subscribe-content">
+            <input
+              type="email"
+              class="subscribe-form-input"
+              placeholder="E-mail"
+              name="user_subscribe_email"
+            />
+            <button type="submit" class="subscribe-btn">
+              Subscribe
+              <svg class="footer-subscribe-btn-icon" width="24" height="24">
+                <use href="./images/svg/symbol-defs.svg#icon-send"></use>
+              </svg>
+            </button>
+          </div>
         </form>
       </div>
     </footer>
