--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </span>
           </label>
 
-          <label for="" class="modal-form-field">
+          <label for="" class="modal-form-text-area">
             <span class="modal-form-input-desc">Comment</span>
             <textarea
               name="user-message"
